--- a/ps-13/stylesheet.css
+++ b/ps-13/stylesheet.css
@@ -1,57 +1,135 @@
+@import url(http://fonts.googleapis.com/css?family=Signika:400,300,600,700);
+
 body {
-  background-color: Gainsboro;
+	font: lighter 20px "Signika";
 }
-h1 {
-  font-family: "Permanent Marker";
-  color: black;
-  font-size: 60px;
-  text-align: center;
-}
-h2 {
-  font-family: "Permanent Marker";
-  color: black;
-  font-size: 40px;
-  text-align: center;
-}
-h3  {
-  font-family: "Permanent Marker";
-  color: black;
-  font-size: 20px;
-  text-align: center;
-}
-a {
-  font-family: "Permanent Marker";
-  color: black;
-  font-size: 20px;
-  align-items: center;
-}
-body {
-  margin: 4em;
-  font-family: "Permanent Marker", sans-serif;
-  color: hsl(100, 100%, 100%);
-  background-color: hsl(0, 0%, 86%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+
 svg {
-  background-color: hsl(0,0%,86%);
-  font-size: 20pt;
-  font-family: "Permanent Marker";
-  color: black;
+  float: left;
+	margin-top:25px;
+	padding-left: 220px;
+	font: lighter 20px "Signika";
 }
-.horizontal-bar {
-  width: 500px;
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.axis text {
+  font: 12px sans-serif;
+}
+
+.action_container {
   display: flex;
-  padding: 1em;
-  justify-content: space-around;
-  justify-self: stretch;
-  font-size: 13pt;
-  color: hsl(0,0%,0%);
+  flex-direction: row;
+  justify-content: space-between;
+  width: 1000px;
+  margin-left: 250px;
 }
-.top {
-  font-size: 16pt;
-  font-weight: bold;
+
+.action_button {
+  font-size: 1em;
+  font-weight: lighter;
+  line-height: 15pt;
+  font-family: "Arial Black", Gadget, sans-serif;
 }
-.footnote {
+
+.narrative {
+	float: right;
+	margin-top: 10px;
+	background-color: grey;
+	width: 254px;
+	height: 520px;
+	display: flex;
+	opacity: 1;
 }
+
+#Bonds {
+  margin-left: 50px;
+  margin-right: 70px;
+}
+
+#Ruth {
+  margin-left: 50px;
+  margin-right: 70px;
+}
+
+#Aaron {
+  margin-left: 50px;
+  margin-right: 70px;
+}
+
+#Mays {
+  margin-left: 50px;
+  margin-right: 70px;
+}
+
+#Rodriguez {
+  margin-left: 50px;
+  margin-right: 70px;
+}
+
+
+
+ .mytooltip {
+  position:absolute;
+  text-align: center;
+	font-size: 30px;
+  width: 230px;
+  height:540px;
+  background-color: #EDE3D1;
+  border-radius: 10px;
+  color: #787777;
+  padding: 6px 12px;
+  z-index:3;
+	float: right;
+}
+
+/*.mytool:after {
+  box-sizing: border-box;
+  display: inline;
+  width: 100%;
+  line-height: 1;
+  color: #EDE3D1;
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+  margin: -3px 0 0 0;
+  top: 100%;
+  left: 0; */
+}
+
+.mytool span {
+    display: block;
+    text-align: center;
+    width: 200px;
+    height: 900px;
+    margin: auto;
+  }
+
+.Tool2 span {
+	display: block;
+	text-align: center;
+	width: 200px;
+	height: 800px;
+	margin: auto;
+}
+}
+
+.data {
+	color: green;
+}
+
+
+
+
+#thumbnail {
+    width: 200px;
+    height: auto;
+    margin: 0 auto;
+    color: #787777;
+    text-align: center;
+  }
